# sapporo-service

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile-dev  LICENSE  MANIFEST.in  README.md  README_ja.md  compose.dev.yml  compose.keycloak.dev.yml  compose.yml  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.uwsgi.yml  docker-compose.yml  entrypoint.dev.sh  llms.txt  mkdocs.yml  pyproject.toml  release.sh  requirements.txt  ro-terms.csv  sapporo-service  sapporo-wes-1-0-1-openapi-spec.yml  sapporo-wes-1-1-0-openapi-spec.yml  sapporo-wes-spec-2.0.0.yml  sapporo-wes-spec.swagger.yml  service-info.yml  setup.py  uwsgi.yml  workflow-info.yml
.claude/commands/: run-wes-workflow.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy.yml  docs.yml  flake8.yml  isort.yml  lint.yml  mypy.yml  pytest.yml  release.yml  upload_ghcr.yml  upload_pypi.yml
api-definition/: SAPPORO-service-api-definition.yml  ga4gh-wes-v1.0.yml  sapporo-wes-v1.1.yml
api-definition/swagger-ui/: index.html
docker/: Dockerfile  example-job.yaml  throw-sapporo.sh
dockerfile-for-wf-engines/: Dockerfile-cromwell  README.md
docs/: agent-quick-ref.md  agent-skill.md  api-spec.md  architecture.md  authentication.md  configuration.md  development.md  getting-started.md  installation.md  releasing.md  ro-crate.md  testing.md  wes-compatibility.md
etc/: .coveragerc  docker-compose.dev.yml  requirements.txt
etc/nginx/: nginx.conf
etc/uwsgi/: uwsgi.ini
keycloak/: realm-export.json
nginx/: nginx.conf
openapi/: ga4gh-wes-spec-1.1.0.yml  sapporo-wes-spec-2.0.0.yml  sapporo-wes-spec-2.1.0.yml
sapporo/: __init__.py  app.py  auth.py  auth_config.json  auth_config.schema.json  available_workflows_config.json  cli.py  config.py  const.py  controller.py  database.py  exceptions.py  executable_workflows.json  executable_workflows.schema.json  factory.py  models.py  parser.py  ro-terms.csv  ro_crate.py  routers.py  run.py  run.sh  run_io.py  sapporo-workflow-run-terms.csv  schemas.py  service-info.json  service-info.schema.json  service_info.json  spec-alt.yml  trs.py  type.py  util.py  utils.py  uwsgi.py  validator.py  wes-ro-terms.csv  workflows_fetch_config.json
sapporo/model/: __init__.py  factory.py  sapporo_wes_1_0_1.py  sapporo_wes_1_1_0.py
sapporo/models/: __init__.py  sapporo_wes_1_0_1.py
src/: run.py  run_workflow.sh
src/app/: __init__.py  config.py  controllers.py  logging_config.py  util.py
src/app/lib/: runs.py  util.py  workflows.py
src/tests/: test_controllers.py
tests/: README.md  resource_list.py  ro-crate-metadata-example.json  ro-crate-metadata.json  test_disable_workflow_atttachment.py  test_get_run_id.py  test_get_run_id_status.py  test_get_runs.py  test_get_service_info.py  test_post_run_id_cancel.py  test_startup_params.py  test_url_prefix.py
tests/curl/: get_run_id.sh  get_service-info.sh  get_status.sh  post_runs.sh
tests/curl_example/: cromwell_bamstats_cwl.sh  cromwell_bamstats_wdl.sh  cwltool_attach_all_files.sh  cwltool_fetch_remote_resource.sh  cwltool_registered_workflow.sh  cwltool_remote_workflow.sh  cwltool_tags_workflow_name.sh  cwltool_workflow_engine_parameters.sh  get_run_id.sh  get_runs.sh  get_service-info.sh  get_status.sh  nextflow_file_input.sh  nextflow_file_input_with_docker.sh  nextflow_params_outdir.sh  nextflow_params_outdir_with_docker.sh  nextflow_str_input.sh  nextflow_str_input_with_docker.sh  post_runs_cancel.sh  snakemake_tutorial_wf.sh  snakemake_tutorial_wf_remote.sh
tests/curl_example/post_runs/: post_runs.sh
tests/integration/: conftest.py  test_auth.py  test_auth_external.py  test_cancel.py  test_cromwell.py  test_cwltool.py  test_delete.py  test_ep3.py  test_nextflow.py  test_ro_crate.py  test_snakemake.py  test_streamflow.py  test_toil.py
tests/lint_and_style_check/: flake8.sh  isort.sh  mypy.sh  run_all.sh
tests/post_runs_examples/: access_remote_files.py  access_remote_files_cwltool.py  attach_all_files_cwltool.py
tests/post_runs_tests/: test_access_remote_files_cwltool.py  test_attach_all_files_cwltool.py  test_registered_only_mode.py
tests/py_tests/: conftest.py  test_app_config.py  test_auth.py  test_cancel_run.py  test_delete_run.py  test_download_outputs.py  test_executable_wfs.py  test_get_run_id.py  test_get_run_id_status.py  test_get_runs.py  test_get_service_info.py  test_post_cwltool.py  test_ro_crate.py  test_run_cromwell.py  test_run_cwltool.py  test_run_nextflow.py  test_run_snakemake.py  test_secure_filepath.py  test_startup_params.py  test_url_prefix.py
tests/pytest/: conftest.py  resource_list.py  test_disable_get_runs.py  test_disable_workflow_attachment.py  test_get_run_id.py  test_get_run_id_status.py  test_get_runs.py  test_get_service_info.py  test_post_run_id_cancel.py  test_post_runs_cwltool_access_remote_files.py  test_post_runs_cwltool_attach_all_files.py  test_post_runs_registered_only_mode.py  test_startup_params.py  test_url_prefix.py
tests/resources/: file_input.nf  str_input.nf  trimming_and_qc_remote.cwl
tests/resources/cwl/: fail.cwl  fastqc.cwl  hello.cwl  hello_params.json  input.txt  sleep.cwl  (+5 more)
tests/ro-crate/: README.md  ro-crate-metadata.json  run_ro-crate_test.sh
tests/unit/: conftest.py  test_app.py  test_auth.py  test_cli.py  test_config.py  test_database.py  test_exceptions.py  test_factory.py  test_ro_crate.py  test_routers.py  test_run.py  test_run_io.py  test_schemas.py  test_utils.py  test_validator.py
tests/unit_test/: conftest.py  test_disable_get_runs.py  test_disable_workflow_attachment.py  test_disable_workflow_atttachment.py  test_download_link.py  test_get_run_id.py  test_get_run_id_status.py  test_get_runs.py  test_get_service_info.py  test_parse_workflow.py  test_post_run_id_cancel.py  test_post_runs_cwltool_access_remote_files.py  test_post_runs_cwltool_attach_all_files.py  test_post_runs_registered_only_mode.py  test_secure_filepath.py  test_startup_params.py  test_url_prefix.py
(+124 files in other folders)
