[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sapporo"
version = "2.0.5"
authors = [
    { name = "DDBJ (Bioinfomatics and DDBJ Center)", email = "tazro.ohta@chiba-u.jp" },
]
description = "The sapporo-service is a standard implementation conforming to the Global Alliance for Genomics and Health (GA4GH) Workflow Execution Service (WES) API specification."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
keywords = ["workflow", "WES", "GA4GH-WES", "bioinformatics"]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "apscheduler",
    "fastapi",
    "httpx",
    "multiqc",
    "pydantic",
    "pyjwt[crypto]",
    "python-magic",
    "python-multipart",
    "pyyaml",
    "rocrate",
    "sqlmodel",
    "uvicorn[standard]",
]

[project.urls]
Homepage = "https://github.com/sapporo-wes/sapporo-service"
Documentation = "https://github.com/sapporo-wes/sapporo-service/blob/main/README.md"
Repository = "https://github.com/sapporo-wes/sapporo-service.git"

[project.optional-dependencies]
tests = [
    "isort",
    "mypy",
    "pylint",
    "pytest-cov",
    "pytest-mock",
    "pytest",
    "types-PyYAML",
]

[project.scripts]
sapporo = "sapporo.app:main"

[tool.setuptools]
packages = ["sapporo"]

[tool.setuptools.package-data]
sapporo = [
    "service_info.json",
    "executable_workflows.json",
    "auth_config.json",
    "run.sh",
    "ga4gh-wes-spec-1.1.0.yml",
]

[tool.pytest.ini_options]
addopts = "--cov=sapporo --cov-report=html:tests/htmlcov"
testpaths = ["tests/py_tests"]

[tool.mypy]
files = ["./sapporo/**/*.py"]
ignore_missing_imports = true
follow_imports = "skip"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pylint.messages_control]
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
    "C0301", # Line too long
    "R0401", # Cyclic import
    "R0903", # Too few public methods
    "R0911", # Too many return statements
    "R0912", # Too many branches
    "R0913", # Too many arguments
    "R0914", # Too many local variables
    "R0915", # Too many statements
    "R1705", # Unnecessary "else" after "return"
]
