[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sapporo"
version = "2.1.0"
authors = [
    { name = "DDBJ (Bioinformatics and DDBJ Center)", email = "tazro.ohta@chiba-u.jp" },
]
description = "The sapporo-service is a standard implementation conforming to the Global Alliance for Genomics and Health (GA4GH) Workflow Execution Service (WES) API specification."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
keywords = ["workflow", "WES", "GA4GH-WES", "bioinformatics"]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "apscheduler",
    "argon2-cffi",
    "fastapi",
    "httpx",
    "multiqc",
    "pydantic-settings>=2.7",
    "pydantic",
    "pyjwt[crypto]",
    "python-magic",
    "python-multipart",
    "pyyaml",
    "rocrate",
    "sqlmodel",
    "uvicorn[standard]",
]

[project.urls]
Homepage = "https://github.com/sapporo-wes/sapporo-service"
Documentation = "https://github.com/sapporo-wes/sapporo-service/blob/main/README.md"
Repository = "https://github.com/sapporo-wes/sapporo-service.git"

[project.optional-dependencies]
tests = [
    "hypothesis",
    "mutmut",
    "mypy",
    "pytest-mock",
    "pytest-randomly",
    "pytest",
    "ruff",
    "types-PyYAML",
]

[project.scripts]
sapporo = "sapporo.app:main"

[tool.hatch.build.targets.wheel]
packages = ["sapporo"]

[tool.pytest.ini_options]
addopts = "-v --tb=short --strict-markers"
testpaths = ["tests/unit"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring Docker (run with 'pytest tests/integration')",
]

[tool.mypy]
files = ["./sapporo/**/*.py", "./tests/unit/**/*.py", "./tests/integration/**/*.py"]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "."

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["tests/resources/"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Docstring (not required in this project)
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D203", # conflicts with D211
    "D213", # conflicts with D212

    # Type annotations (mypy handles this)
    "ANN",

    # Complexity (same policy as previous pylint config)
    "C901",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0914",
    "PLR0915",
    "PLR0917",

    # Style preferences
    "RET505", # Unnecessary else after return (project convention)
    "SIM114", # If with same arms (preserves per-branch comments)
    "SIM115", # Use context manager for opening files (Popen)
    "E501",   # Line too long (formatter handles this)

    # Exception handling (would need custom exception hierarchy)
    "BLE001", # Do not catch blind exception
    "TRY002", # Create your own exception
    "TRY003", # Avoid long messages outside exception class
    "TRY301", # Raise within try

    # Import style (circular import workaround, fix in Phase 9)
    "PLC0415",

    # Boolean arguments (conflicts with FastAPI Query pattern)
    "FBT001", # Boolean type hint positional argument
    "FBT002", # Boolean default value positional argument
    "FBT003", # Boolean positional value in call

    # FastAPI patterns (framework constraints)
    "B008",    # Function call in default argument (Depends/Query)
    "FAST001", # Redundant response_model (intentional for API docs)
    "FAST002", # Non-annotated dependency (existing pattern)
    "ARG001",  # Unused function argument (unimplemented endpoints)

    # Security (false positives / intentional)
    "S104", # Hardcoded bind all interfaces (server)
    "S105", # Hardcoded password string (field names)
    "S108", # Hardcoded temp file
    "S110", # Try-except-pass (intentional)
    "S603", # Subprocess without shell (intentional)

    # Miscellaneous
    "N815",   # Mixed case variable in class scope (Pydantic)
    "RUF001", # Ambiguous unicode character (intentional test data)

    # Formatter conflicts
    "COM812",
    "ISC001",

    # TODO comments
    "FIX002",
    "TD003",
]

[tool.ruff.lint.per-file-ignores]
"sapporo/cli.py" = ["T201"] # print is intentional CLI output
"tests/**/*.py" = [
    "INP001",  # Implicit namespace package
    "PIE804",  # Unnecessary dict kwargs (type: ignore on dict spread)
    "PLR2004", # Magic value in comparison
    "PT003",   # Extraneous scope function
    "PT006",   # Wrong type for parametrize names
    "PT011",   # Pytest raises too broad
    "S101",    # Use of assert
    "SLF001",  # Private member access
    "T201",    # Print for debugging output
]

[tool.mutmut]
# auth.py references data files via __file__, which is incompatible with mutmut's mutants/ copy
paths_to_mutate = [
    "sapporo/utils.py",
    "sapporo/exceptions.py",
    "sapporo/config.py",
]
tests_dir = ["tests/unit/"]

[dependency-groups]
dev = ["mkdocs-material>=9.7.1"]
